# JumpKingAI

./: CMakeLists.txt  NeuralNetworkTemplate.cpp  data_generator.py  main.cpp
src/: NeuralNetworkTemplate.cpp  game_simulation.cpp  game_simulation.h  main.cpp  neural_network.cpp  neural_network.h
